logs/dag_id=a_third_dag/run_id=manual__2022-11-10T20:02:56.066252+00:00/task_id=insert_table/attempt=1.log
[2022-11-10T20:03:00.993+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: a_third_dag.insert_table manual__2022-11-10T20:02:56.066252+00:00 [queued]>
[2022-11-10T20:03:01.009+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: a_third_dag.insert_table manual__2022-11-10T20:02:56.066252+00:00 [queued]>
[2022-11-10T20:03:01.011+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-10T20:03:01.013+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-11-10T20:03:01.016+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-10T20:03:01.041+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): insert_table> on 2022-11-10 20:02:56.066252+00:00
[2022-11-10T20:03:01.050+0000] {standard_task_runner.py:55} INFO - Started process 15884 to run task
[2022-11-10T20:03:01.065+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'a_third_dag', 'insert_table', 'manual__2022-11-10T20:02:56.066252+00:00', '--job-id', '54', '--raw', '--subdir', 'DAGS_FOLDER/third_dug.py', '--cfg-path', '/tmp/tmpip0vzere']
[2022-11-10T20:03:01.076+0000] {standard_task_runner.py:83} INFO - Job 54: Subtask insert_table
[2022-11-10T20:03:01.171+0000] {task_command.py:376} INFO - Running <TaskInstance: a_third_dag.insert_table manual__2022-11-10T20:02:56.066252+00:00 [running]> on host 0b03955da713
[2022-11-10T20:03:01.252+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=a_third_dag
AIRFLOW_CTX_TASK_ID=insert_table
AIRFLOW_CTX_EXECUTION_DATE=2022-11-10T20:02:56.066252+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-10T20:02:56.066252+00:00
[2022-11-10T20:03:01.267+0000] {base.py:71} INFO - Using connection ID '***' for task execution.
[2022-11-10T20:03:01.276+0000] {sql.py:315} INFO - Running statement: 
             INSER INTO currency_pair (price, pair)
             VALUES (1234, USDGBH),
             (4532, GBHUSD);
           , parameters: None
[2022-11-10T20:03:01.280+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "INSER"
LINE 2:              INSER INTO currency_pair (price, pair)
                     ^

[2022-11-10T20:03:01.302+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=a_third_dag, task_id=insert_table, execution_date=20221110T200256, start_date=20221110T200300, end_date=20221110T200301
[2022-11-10T20:03:01.324+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 54 for task insert_table (syntax error at or near "INSER"
LINE 2:              INSER INTO currency_pair (price, pair)
                     ^
; 15884)
[2022-11-10T20:03:01.351+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-10T20:03:01.375+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
